--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -37,6 +37,7 @@
                         <field name="property_type_id"/>
                         <field name="postcode" />
                         <field name="expected_price" />
+                        <field name="best_price" />
                     </group>
                     <group>
                         <field name="date_availability" />
@@ -53,6 +54,7 @@
                                 <field name="has_garden"/>
                                 <field name="garden_area"/>
                                 <field name="garden_orientation"/>
+                                <field name="total_area"/>
                             </group>
                             <group>
                                 <field name="active"/>
@@ -65,6 +67,8 @@
                                     <tree string="Tests">
                                         <field name="price"/>
                                         <field name="status"/>
+                                        <field name="validity"/>
+                                        <field name="date_deadline"/>
                                     </tree>
                                 </field>
                             </group>
